testsuite/tests/module/mod91.stderr

mod91.hs:3:16: error: [GHC-10237]
    In the import of ‘Prelude’:
      an item called ‘Eq’ is exported, but it does not export any children
      (constructors, class methods or field names) called ‘eq’.
